--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=rest
-DB_USERNAME=root
-DB_PASSWORD=admin
+DB_DATABASE=
+DB_USERNAME=
+DB_PASSWORD=
