--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
     "bootstrap": "^3.3.7",
+    "cross-env": "^5.1.1",
     "element-ui": "^1.4.6",
+    "imagemin-webpack-plugin": "^1.5.2",
     "laravel-mix": "^1.6.1",
     "laravel-mix-stylus": "^0.3.0",
     "vue": "^2.5.8",
@@ -80,6 +82,9 @@
     "webpack-dev-middleware": "^1.10.0",
     "webpack-hot-middleware": "^2.18.0",
     "webpack-merge": "^4.1.0"
+  },
+  "config": {
+    "webpack": "node_modules/laravel-mix/setup/webpack.config.js"
   },
   "engines": {
     "node": ">= 8.0.0",
