--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "psr/http-message": "1.0.*",
     "symfony/var-dumper": "3.4.*",
     "zendframework/zend-diactoros": "1.6.*",
-    "php": ">=7.0"
+    "php": ">=7.0",
+    "firebase/php-jwt": "^5.0"
   },
   "require-dev": {
   },
