--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "friendly-errors-webpack-plugin": "^1.1.3",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
+    "imagemin-webpack-plugin": "^1.5.2",
     "moment": "^2.18.1",
     "opn": "^5.1.0",
     "optimize-css-assets-webpack-plugin": "^2.0.0",
@@ -77,10 +78,10 @@
     "vue-loader": "^13.0.4",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.8",
-    "webpack": "^3.2.0",
+    "webpack": "^3.8.1",
     "webpack-bundle-analyzer": "^2.2.1",
     "webpack-dev-middleware": "^1.10.0",
-    "webpack-hot-middleware": "^2.18.0",
+    "webpack-hot-middleware": "^2.21.0",
     "webpack-merge": "^4.1.0"
   },
   "config": {
